Adjusted margin of empty paw to be centered and align text correctly

--- a/styles/app.styl
+++ b/styles/app.styl
@@ -129,6 +129,8 @@ for $stage in (worst $worst) (worse $worse) (bad $bad) (neutral $neutral) (good 
 
 .stable-pet-not-owned-icon
   float: left
+  margin-right: 14px
+  margin-left: 15px
 
 .inventory-item-icon
   float: left
